--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,9 @@
     <script src="{{  site.baseurl }}/common_assets/js/magnific-popup.video.js"></script>
     <script src="{{  site.baseurl }}/common_assets/js/magnific-popup.min.js"></script>
         
-    <script src= "{{  site.baseurl }}/assets/js/ga.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ6WYRD63R"></script>
+    <script src= "{{  site.baseurl }}/assets/js/gtag.js"></script>
 
     <!-- FontAwesome Latest version Kit (automatically updated) -->
     <script src="https://kit.fontawesome.com/16cf99803e.js" crossorigin="anonymous"></script>    
