Improve modelers pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,17 @@
+<div class="col-md-4">
+    <p><a href="https://www.obeosoft.com/"><img src="{{  site.baseurl }}/common_assets/images/logos/logo_obeo.png" alt="Obeo logo"></a></p>
+    <p id="copyright">Copyright © {{ 'now' | date: '%Y' }} <a href="https://www.obeosoft.com/">Obeo</a>.<br>All Rights Reserved.</p>
+</div>
 
-<div class="col-md-3">
-    <h6>Project Links</h6>
+<div class="col-md-4">
+    <h6>Fonctionalités</h6>
     <ul>
-        <li><a href="https://projects.eclipse.org/projects/modeling.sirius" target="_blank">About this project</a></li>
-        <li><a href="https://wiki.eclipse.org/Sirius" target="_blank">Wiki</a></li>
-        <li><a href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=262" target="_blank">Forum</a></li>
-        <li><a href="https://bugs.eclipse.org/bugs/buglist.cgi?list_id=6776579&classification=Modeling&query_format=advanced&product=Sirius" target="_blank">Bugs</a></li>
-        <li><a href="https://git.eclipse.org/c/sirius/org.eclipse.sirius.git" target="_blank">Source Code</a></li>
+        <li><a href="fonctionnalites.html">Vue globale</a></li>
+        <li><a href="requirements-designer.html">Requirements Designer</a></li>
+        <li><a href="graal-designer.html">Graal Designer</a></li>
+        <li><a href="soa-designer.html">SOA Designer</a></li>
+        <li><a href="entity-designer.html">Entity Designer</a></li>
+        <li><a href="database-designer.html">Database Designer</a></li>
+        <li><a href="cinematic-designer.html">Cinematic Designer</a></li>
     </ul>
 </div>
