--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,23 +10,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/styles.css">
     <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/animate.css">
     <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/media.css"/>
     <link rel="stylesheet" href="{{  site.baseurl }}/assets/css/main.css"/>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="{{  site.baseurl }}/common_assets/js/magnific-popup.video.js"></script>
-    <script src="{{  site.baseurl }}/common_assets/js/magnific-popup.min.js"></script>
-        
-    <script src= "{{  site.baseurl }}/assets/js/ga.js"></script>
-
     <!-- FontAwesome Latest version Kit (automatically updated) -->
     <script src="https://kit.fontawesome.com/16cf99803e.js" crossorigin="anonymous"></script>    
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     
     <script>
         jQuery(function($){ $(".hasTooltip").tooltip({"html": true,"container": "body"}); });
