--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,19 +1,31 @@
 <!-- Navigation -->
 <header id="top-bar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.baseurl }}">
-            <img src="{{  site.baseurl }}/common_assets/images/logos/logo_isdesigner.png" alt="Logo Information System Designer">
+        <a class="navbar-brand" href="{{ site.baseurl }}/">
+            <img class="logo-default" width="185" src="{{  site.baseurl }}/images/logos/logo_isdesigner.svg" alt="Logo Information System Designer">
         </a>
         <!-- /logo -->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
         </button> 
-        <nav class="navbar-collapse collapse" id="navbarResponsive">
-            <div class="main-menu ml-auto">
+        <nav class="navbar-collapse collapse d-flex align-items-end flex-column" id="navbarResponsive">
+            <div class="main-menu">
                 <ul class="nav navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownFeatures" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fonctionalités <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownFeatures">
+                            <li><a class="dropdown-item" href="fonctionnalites.html">Vue globale</a></li>
+                            <li><a class="dropdown-item" href="requirements-designer.html">Requirements Designer</a></li>
+                            <li><a class="dropdown-item" href="graal-designer.html">Graal Designer</a></li>
+                            <li><a class="dropdown-item" href="soa-designer.html">SOA Designer</a></li>
+                            <li><a class="dropdown-item" href="entity-designer.html">Entity Designer</a></li>
+                            <li><a class="dropdown-item" href="database-designer.html">Database Designer</a></li>
+                            <li><a class="dropdown-item" href="cinematic-designer.html">Cinematic Designer</a></li>
+                          </ul>
+                    </li>
                     <li id="dwnld">
-                        <a href="https://github.com/ObeoNetwork/InformationSystem/releases">&nbsp;&nbsp;&nbsp;&nbsp;Télécharger</a>
+                        <a href="https://github.com/ObeoNetwork/InformationSystem/releases">Télécharger</a>
                     </li>
                 </ul>
             </div>
