--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,10 +1,18 @@
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous" defer></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ6WYRD63R"></script>
+<script src= "{{  site.baseurl }}/assets/js/gtag.js"></script>
 
-<script src="{{  site.baseurl }}{{"common_assets/js/wow.min.js" | relative_url }}" defer></script>
-<script src="{{  site.baseurl }}{{"common_assets/js/main.js" | relative_url }}" defer></script>
-<script src="{{  site.baseurl }}{{"common_assets/js/magnific-popup.min.js" | relative_url }}" defer></script>
-<script src="{{  site.baseurl }}{{"common_assets/js/magnific-popup.video.js" | relative_url }}" defer></script>
+<script src="{{  site.baseurl }}/common_assets/js/magnific-popup.video.js"></script>
+<script src="{{  site.baseurl }}/common_assets/js/magnific-popup.min.js"></script>
+<script src="{{  site.baseurl }}/common_assets/js/wow.min.js"></script>
+<script src="{{  site.baseurl }}/common_assets/js/main.js"></script>
+
 <!-- Call wow function -->
 <script>
         jQuery(document).ready(function(){
