--- a/_layouts/isdesigner_default.html
+++ b/_layouts/isdesigner_default.html
@@ -6,19 +6,15 @@
   <body>
 
     {% include navbar.html %}
-    
     {{ content }}
 
-    <!--
-<footer>
-  <div class="container">
-      <div class="row">    
-        {% include footer.html %}
-    </div>
-  </div>
-</footer> -->
-
+    <footer>
+      <div class="container">
+          <div class="row">    
+            {% include footer.html %}
+        </div>
+      </div>
+    </footer>
     {% include scripts.html %}
-  
   </body>
 </html>
