--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,16 +5,16 @@
     <title>{{ page.title }}</title>
   
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-    <link rel="shortcut icon" type="image/png" href="{{  site.baseurl }}/images/favicon_isdesigner.ico"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon_isdesigner.ico"/>
   
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/styles.css">
-    <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/animate.css">
-    <link rel="stylesheet" href="{{  site.baseurl }}/common_assets/css/media.css"/>
-    <link rel="stylesheet" href="{{  site.baseurl }}/assets/css/main.css"/>
+    <link rel="stylesheet" href="common_assets/css/styles.css">
+    <link rel="stylesheet" href="common_assets/css/animate.css">
+    <link rel="stylesheet" href="common_assets/css/media.css"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
 
     <!-- FontAwesome Latest version Kit (automatically updated) -->
     <script src="https://kit.fontawesome.com/16cf99803e.js" crossorigin="anonymous"></script>    
