--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,10 +8,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ6WYRD63R"></script>
 <script src= "{{  site.baseurl }}/assets/js/gtag.js"></script>
 
-<script src="{{  site.baseurl }}/common_assets/js/magnific-popup.video.js"></script>
-<script src="{{  site.baseurl }}/common_assets/js/magnific-popup.min.js"></script>
-<script src="{{  site.baseurl }}/common_assets/js/wow.min.js"></script>
-<script src="{{  site.baseurl }}/common_assets/js/main.js"></script>
+<script src="common_assets/js/magnific-popup.video.js"></script>
+<script src="common_assets/js/magnific-popup.min.js"></script>
+<script src="common_assets/js/wow.min.js"></script>
+<script src="common_assets/js/main.js"></script>
 
 <!-- Call wow function -->
 <script>
