--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 <header id="top-bar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-            <img class="logo-default" width="185" src="{{  site.baseurl }}/images/logos/logo_isdesigner.svg" alt="Logo Information System Designer">
+            <img class="logo-default" width="185" src="images/logos/logo_isdesigner.svg" alt="Logo Information System Designer">
         </a>
         <!-- /logo -->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
