--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <header id="top-bar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{{ site.baseurl }}/">
+        <a class="navbar-brand" href="/">
             <img class="logo-default" width="185" src="images/logos/logo_isdesigner.svg" alt="Logo Information System Designer">
         </a>
         <!-- /logo -->
