--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-    <p><a href="https://www.obeosoft.com/"><img src="images/logos/logo_obeo.png" alt="Obeo logo"></a></p>
+    <p><a href="https://www.obeosoft.com/"><img src="common_assets/images/logos/logo_obeo.png" alt="Obeo logo"></a></p>
     <p id="copyright">Copyright © {{ 'now' | date: '%Y' }} <a href="https://www.obeosoft.com/">Obeo</a>.<br>All Rights Reserved.</p>
 </div>
 
