--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
             <div class="main-menu">
                 <ul class="nav navbar-nav">
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownFeatures" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fonctionalités <span class="caret"></span></a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownFeatures" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fonctionnalités <span class="caret"></span></a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownFeatures">
                             <li><a class="dropdown-item" href="fonctionnalites.html">Vue globale</a></li>
                             <li><a class="dropdown-item" href="requirements-designer.html">Requirements Designer</a></li>
