--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,3 +20,8 @@
 .card.banner a:hover {
     color: #FBB800;
 }
+
+@media only screen and (max-width: 1199px)
+body {
+    padding-top: 80px !important;
+}
