--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@
     color: #FBB800;
 }
 
-@media only screen and (max-width: 1199px)
+@media only screen and (max-width: 1199px){
 body {
     padding-top: 80px !important;
 }
