--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,7 +6,7 @@
     
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VZ6WYRD63R"></script>
-<script src= "{{  site.baseurl }}/assets/js/gtag.js"></script>
+<script src= "assets/js/gtag.js"></script>
 
 <script src="common_assets/js/magnific-popup.video.js"></script>
 <script src="common_assets/js/magnific-popup.min.js"></script>
