--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,6 +12,7 @@
         <nav class="navbar-collapse collapse d-flex align-items-end flex-column" id="navbarResponsive">
             <div class="main-menu">
                 <ul class="nav navbar-nav">
+                    <li><a href="solutions.html" class="nav-link">Solutions</a></li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="dropdownFeatures" role="button" data-bs-toggle="dropdown" aria-expanded="false">Fonctionnalités <span class="caret"></span></a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownFeatures">
