--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,6 +23,7 @@
                             <li><a class="dropdown-item" href="entity-designer.html">Entity Designer</a></li>
                             <li><a class="dropdown-item" href="database-designer.html">Database Designer</a></li>
                             <li><a class="dropdown-item" href="cinematic-designer.html">Cinematic Designer</a></li>
+                            <li><a class="dropdown-item" href="generateurs.html">Générateurs de code</a></li>
                           </ul>
                     </li>
                     <li id="dwnld">
