--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,7 @@
                             <li><a class="dropdown-item" href="generateurs.html">Générateurs de code</a></li>
                           </ul>
                     </li>
+                    <li><a href="ressources.html" class="nav-link">Ressources</a></li>
                     <li id="dwnld">
                         <a href="https://github.com/ObeoNetwork/InformationSystem/releases">Télécharger</a>
                     </li>
